--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ php:
 env:
  global:
   - MOODLE_BRANCH=master
+  - MOODLE_BRANCH=MOODLE_35_STABLE
+  - MOODLE_BRANCH=MOODLE_34_STABLE
  matrix:
   - DB=pgsql
   - DB=mysqli
