disable phpunit test - no tests included yet.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,4 +10,4 @@ jobs:
       moodle_org_token: ${{ secrets.MOODLE_ORG_TOKEN }}
     with:
       disable_behat: true
-      disable_grunt: true
+      disable_phpunit: true
